[package]
name = "u-siem-squid"
version = "0.0.2"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "uSIEM Squid proxy parser"
repository = "https://github.com/u-siem/u-siem-core"
keywords = ["SIEM", "security", "logs","syslog","dns"]
categories = ["parsing"]
edition = "2018"

[lib]
name = "usiem_squid"
path = "src/lib.rs"

[dev-dependencies]
reqwest = {version = "0.10.8", features = ["blocking"]}

[dependencies]
serde = { version = "1.0", features = ["derive"] }
u-siem = {version = "0.0"}
chrono = "0.4"
crossbeam-channel = { version = "0.5" }
coarsetime = {version = "0.1.18" }